--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,9 +7,11 @@
 
 // Behold, here are all the Foundation components.
 @import
-  "foundation",
-  "style/aspect-ratio",
-  "style/onepage-scroll",
-  "style/media-object",
-  "style/content";
+	"foundation",
+	"style/content",
+	"style/onepage-scroll",
+	"style/aspect-ratio",
+	"style/media-object",
+	"style/arrow-nav";
+  
   
