--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -123,7 +123,6 @@
 	}
 
 	.post {
-		//background: none repeat scroll 0 0 #000;
 		height: 100%;
 		height: 100vh;
 		
@@ -156,8 +155,11 @@
 			position: relative;
 			top: 50%;
 			left: 50%;
+			-ms-transform: translate(-50%, -50%);
 			transform: translate3d(-50%, -50%, 0px);			
 		}
+		
+		
 		
 		.entry-header {			
 			text-align: left;			
@@ -214,8 +216,18 @@
 		pointer-events: initial;
 	}
 	*/
-
 }
+/*
+.no-csstransforms3d {
+	.archive {
+		.post {
+			img {
+				transform: translate(-50%, -50%);
+			}
+		}
+	}
+}
+*/
 
 /*
 .effect-lily {
