--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -240,7 +240,7 @@ $font-weight-bold: bold !default;
 // We use these to control various global styles
 $body-bg: #fff !default;
 $body-font-color: #333 !default;
-$body-font-family: Roboto, Segoe UI, Helvetica Neue, Helvetica, Helvetica, Arial, sans-serif !default;
+$body-font-family: Roboto, Lato, Segoe UI, Helvetica Neue, Helvetica, Helvetica, Arial, sans-serif !default;
 $body-font-weight: $font-weight-normal !default;
 $body-font-style: normal !default;
 
