--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -362,6 +362,26 @@ $cursor-text-value: text !default;
   meta.foundation-data-attribute-namespace {
     font-family: #{$namespace};
   }
+  
+	@font-face {
+		font-family: 'Lato';
+		font-style: normal;
+		font-weight: 100;
+		src: local('Lato Hairline'), local('Lato-Hairline'), url(http://fonts.gstatic.com/s/lato/v8/boeCNmOCCh-EWFLSfVffDg.woff) format('woff');
+	}
+	@font-face {
+		font-family: 'Lato';
+		font-style: normal;
+		font-weight: 300;
+		src: local('Lato Light'), local('Lato-Light'), url(http://fonts.gstatic.com/s/lato/v8/KT3KS9Aol4WfR6Vas8kNcg.woff) format('woff');
+	}
+	
+	@font-face {
+		font-family: 'Lato';
+		font-style: normal;
+		font-weight: 400;
+		src: local('Lato Regular'), local('Lato-Regular'), url(http://fonts.gstatic.com/s/lato/v8/9k-RPmcnxYEPm8CNFsH2gg.woff) format('woff');
+	}
 
   @if $include-html-global-classes {
 
