--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,7 @@
 	"style/onepage-scroll",
 	"style/aspect-ratio",
 	"style/media-object",
-	"style/arrow-nav";
+	"style/lazyYT";
+	//"style/arrow-nav";
   
   
