--- a/scss/style/_onepage-scroll.scss
+++ b/scss/style/_onepage-scroll.scss
@@ -1,4 +1,5 @@
-$onepage-slide: "transform 640ms ease-out" !default;
+//$onepage-slide: "transform 640ms ease-out" !default;
+$onepage-slide: "transform 640ms cubic-bezier(1.000, 0.000, 0.000, 1.000)" !default;
 
 .disable-hover,
 .disable-hover * 
@@ -22,7 +23,8 @@ body, #onepagescroll, html {
 	-o-transition: -o-#{$onepage-slide};
 	transition: #{$onepage-slide};
 	will-change: transform;
-	width: 100%;
+	float: left;
+	width: 50%;
 	height: 100%;
 	display: block;
 	position: relative;
@@ -33,11 +35,16 @@ body, #onepagescroll, html {
 	-o-transform: translateZ(0);
 	transform: translateZ(0);
 	backface-visibility: hidden;
+	overflow-y: scroll;
 
 	.section {
 		width: 100%;
 		height: 100%;
 	}
+}
+
+#onepagescroll.activated {
+	overflow-y: visible;
 }
 
 .onepage-pagination {
