dynamic load posts & infinite load working together

--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -509,7 +509,7 @@
 	.main-section {
 		overflow-x: hidden;
 		overflow-y: scroll;
-		box-shadow: 0 0 $base-line-height $sidenav-width hsl(0, 0%, 95%) inset;
+		//box-shadow: 0 0 $base-line-height $sidenav-width hsl(0, 0%, 95%) inset;
 	}
 	
 	.placeholder-container {
