--- a/scss/_foundation.scss
+++ b/scss/_foundation.scss
@@ -28,7 +28,7 @@
   //"foundation/components/pagination",
   //"foundation/components/panels",
   //"foundation/components/pricing-tables",
-  //"foundation/components/progress-bars",
+  "foundation/components/progress-bars",
   //"foundation/components/range-slider",
   //"foundation/components/reveal",
   //"foundation/components/side-nav",
