--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -262,7 +262,7 @@ $opposite-direction: right !default;
 $primary-color: #e60444 !default;
 $secondary-color: #e7e7e7 !default;
 $alert-color: #f04124 !default;
-$success-color: #43AC6A !default;
+$success-color: #009913 !default;
 $warning-color: #f08a24 !default;
 $info-color: #a0d3e8 !default;
 
