--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -90,11 +90,11 @@
 				opacity: 0.6;
 				
 				@media #{$medium-up} {
-					filter: blur(3px);
-					-webkit-filter: blur(3px); 
-					-moz-filter: blur(3px); 
-					-o-filter: blur(3px); 
-					-ms-filter: blur(3px);
+					filter: blur(10px);
+					-webkit-filter: blur(10px); 
+					-moz-filter: blur(10px); 
+					-o-filter: blur(10px); 
+					-ms-filter: blur(10px);
 					filter: url(blur.svg#blur);
 				}
 			}
@@ -416,6 +416,7 @@
 
 .centerTitle {
 	height: 100%;
+	width: 100%;
 	
 	.centered {
 		height: 100%;
@@ -533,5 +534,102 @@
 	&:hover {
 		//opacity: 1;
 		@include animation('none');
+	}
+}
+
+#cv {
+	background: #121314;
+	color: #88898c;
+	
+	.white {
+		color: #fff;
+	}
+	.white-box {
+		background: rgba(0,0,0,.4);
+		
+		.avatar {
+			display: inline-block;
+			margin-top: -72px;
+			width: 144px;
+			height: 144px;
+		}
+	}
+	
+	.white-box, .avatar {
+		border-style: solid;
+		border-width: 6px;
+		border-color: #fff;
+	}
+	
+	.avatar {
+		border-radius: 50%;
+		overflow: hidden;
+		
+		img {
+			max-width: none;
+			width: 100%;
+			height: auto;
+		}
+	}
+	
+	.headline {
+		margin: 0;
+		letter-spacing: 1px;
+	}
+	
+	.headline, .subtitle {
+		margin-top: 0;
+		font-weight: 900;
+	}
+	
+	.dark-box {
+		background: #222326;
+		padding: 1.625rem;
+		margin: 0 0 1.625rem * 4;
+		
+		.headline {
+			color: $primary-color;
+			text-transform: uppercase;
+			text-align: center;
+			line-height: $h3-line-height;
+		}
+		
+		p {
+			font-weight: 700;
+		}
+		
+		.columns {
+			padding: 0 1.625rem;
+		}
+		
+		hr {
+			border-color: #393b40;
+			 margin: $hr-margin 0 ($hr-margin - rem-calc($hr-border-width)) * 2;
+		}
+		
+		.section {
+			margin-bottom: $h3-margin-bottom * 2;
+		}
+		
+		.section:last-child {
+			margin-bottom: 0;
+		}
+	}
+	
+	.label {
+		display: block;
+		font-size: $h4-font-size; 
+		line-height: $h4-line-height;
+		//margin-top: $h4-margin-top;
+		text-transform: uppercase;
+		font-weight: 900;
+		
+		&.no-margin {
+			margin: 0;
+		}
+		
+		&.success {
+			color: $success-color;
+		}
 	}
 }
