--- a/scss/style/_onepage-scroll.scss
+++ b/scss/style/_onepage-scroll.scss
@@ -24,7 +24,7 @@ body, #onepagescroll, html {
 	transition: #{$onepage-slide};
 	will-change: transform;
 	float: left;
-	width: 50%;
+	width: 100%;
 	height: 100%;
 	display: block;
 	position: relative;
@@ -40,6 +40,14 @@ body, #onepagescroll, html {
 	.section {
 		width: 100%;
 		height: 100%;
+	}
+}
+
+.archive {
+	#content {
+		#onepagescroll {
+			width: 50%;
+		}
 	}
 }
 
