cv scrollto center

--- a/scss/style/_aspect-ratio.scss
+++ b/scss/style/_aspect-ratio.scss
@@ -4,10 +4,10 @@
 </div>
 */
 
-
-
 .box{
+	display: block;
 	position: relative;
+	overflow: hidden;
 	//width: 50%;		/* desired width */
 }
 .box:before{
