--- a/scss/foundation/components/_clearing.scss
+++ b/scss/foundation/components/_clearing.scss
@@ -44,7 +44,7 @@ $clearing-carousel-thumb-active-border: 1px solid rgb(255,255,255) !default;
     .clearing-thumbs, #{data('clearing')} {
       @include clearfix;
       margin-bottom: 0;
-      margin-#{$default-float}: 0;
+      //margin-#{$default-float}: 0;
       list-style: none;
 
       li {
