--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -537,7 +537,7 @@
 	}
 }
 
-#cv {
+.page-template-page-cv-php #main {
 	background: #121314;
 	color: #88898c;
 	
@@ -674,11 +674,11 @@
 	
 	.label {
 		display: block;
-		font-size: $h4-font-size; 
+		//font-size: $h4-font-size; 
 		line-height: $h4-line-height;
 		//margin-top: $h4-margin-top;
 		text-transform: uppercase;
-		font-weight: 900;
+		//font-weight: 900;
 
 		&.no-margin {
 			margin: 0;
@@ -696,7 +696,7 @@
 	}
 }
 
-#cv.light {
+.page-template-page-cv-php #main.light {
 	background: #f1f2f3;
 	background: rgba(255, 255, 255, .5);
 	
