--- a/scss/foundation/components/_global.scss
+++ b/scss/foundation/components/_global.scss
@@ -259,7 +259,7 @@ $opposite-direction: right !default;
   $opposite-direction: left;
 }
 // We use these as default colors throughout
-$primary-color: #e60444 !default;
+$primary-color: #D81D3F !default;
 $secondary-color: #e7e7e7 !default;
 $alert-color: #f04124 !default;
 $success-color: #009913 !default;
