--- a/scss/style/_content.scss
+++ b/scss/style/_content.scss
@@ -537,13 +537,45 @@
 	}
 }
 
-.page-template-page-cv-php #main {
-	background: #121314;
-	color: #88898c;
+.page-template-page-contact-php {
 	
 	.placeholder-container {
-		background-color: transparent;
+		height: calc( 100vh - 6rem );
+		
+		@media #{$small-only} {
+			padding: 1.625rem;		
+			overflow: auto !important;
+			height: auto;
+			background: none !important;
+		}
 	}
+	.main-section {
+		overflow-y: auto;
+	}
+}
+
+.page-template-page-cv-php, 
+.page-template-page-contact-php {
+	 #main {
+		background: url(../img/Mc8kW4x9Q3aRR3RkP5Im_IMG_4417.jpg);
+		background-size: cover;
+	}
+	
+	.placeholder-container {
+		/*
+		background: -moz-linear-gradient(top,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0)), color-stop(100%,rgba(0,0,0,0.65)));
+		background: -webkit-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+		background: -o-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+		background: -ms-linear-gradient(top,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+		*/
+		background: linear-gradient(to bottom,  rgba(0,0,0,0) 0%,rgba(0,0,0,0.65) 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00000000', endColorstr='#a6000000',GradientType=0 );
+	}
+}
+
+.page-template-page-cv-php #main {
+	color: #88898c;
 	
 	.placeholder {
 		position: absolute;
@@ -556,6 +588,10 @@
 			display: table-cell;
 			vertical-align: middle;
 		}
+	}
+	
+	.post-content {
+		background: rgba(0,0,0,0.65);
 	}
 	
 	.white {
@@ -696,19 +732,408 @@
 	}
 }
 
-.page-template-page-cv-php #main.light {
-	background: #f1f2f3;
-	background: rgba(255, 255, 255, .5);
+.page-template-page-cv-php.light #main {
+	//background: #f1f2f3;
+	//background: rgba(255, 255, 255, .5);
+	
+	.placeholder {
+		//background-image: url(../img/prism-white.jpg) !important;
+	}
 	
 	.dark-box {
-		background: #fff;
+		background: #fff;		
 		
 		hr {
-			border-color: #d9dadd;
+			border-color: #F2F2F2;
 		}
 	}
 	
 	.progress {
 		background: #c9cace;
 	}
+}
+
+#light {
+	font-family:icon-worksregular;
+	position: fixed;
+	top: 0.8125rem;
+	right: 0.8125rem;
+	width: 1.626rem;
+	height: 1.625rem;
+	//background: red;
+	z-index: 9999;
+	
+	&::before {
+		content: "r";
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		font-size: 1.625rem;
+		cursor: pointer;
+		
+	}
+	
+	&.active::before {
+		content: "R";
+	}
+}
+
+
+
+
+@font-face {
+    font-family: 'icon-worksregular';
+    src: url('fonts/icon-works-webfont.eot');
+    src: url('fonts/icon-works-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/icon-works-webfont.woff') format('woff'),
+         url('fonts/icon-works-webfont.ttf') format('truetype'),
+         url('fonts/icon-works-webfont.svg#icon-worksregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
+
+
+/*! fancyBox v2.1.5 fancyapps.com | fancyapps.com/fancybox/#license */
+.fancybox-wrap,
+.fancybox-skin,
+.fancybox-outer,
+.fancybox-inner,
+.fancybox-image,
+.fancybox-wrap iframe,
+.fancybox-wrap object,
+.fancybox-nav,
+.fancybox-nav span,
+.fancybox-tmp
+{
+	padding: 0;
+	margin: 0;
+	border: 0;
+	outline: none;
+	vertical-align: top;
+}
+
+.fancybox-wrap {
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 8020;
+}
+
+.fancybox-skin {
+	position: relative;
+	background: #fff;
+	color: #444;
+	text-shadow: none;
+	-webkit-border-radius: 4px;
+	   -moz-border-radius: 4px;
+	        border-radius: 4px;
+}
+
+.fancybox-opened {
+	z-index: 8030;
+}
+
+.fancybox-opened .fancybox-skin {
+	-webkit-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
+	   -moz-box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
+	        box-shadow: 0 0px 5px rgba(0, 0, 0, 0.15);
+}
+
+.fancybox-outer, .fancybox-inner {
+	position: relative;
+}
+
+.fancybox-inner {
+	overflow: hidden;
+}
+
+.fancybox-type-iframe .fancybox-inner {
+	-webkit-overflow-scrolling: touch;
+}
+
+.fancybox-error {
+	color: #444;
+	font: 14px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+	margin: 0;
+	padding: 15px;
+	white-space: nowrap;
+}
+
+.fancybox-image, .fancybox-iframe {
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+
+.fancybox-image {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+#fancybox-loading {
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	margin-top: -22px;
+	margin-left: -22px;
+	background-position: 0 -108px;
+	opacity: 0.8;
+	cursor: pointer;
+	z-index: 8060;
+}
+
+
+.fancybox-close {
+	position: absolute;
+	top: -18px;
+	right: -18px;
+	width: 36px;
+	height: 36px;
+	cursor: pointer;
+	z-index: 8040;
+}
+
+.fancybox-nav {
+	position: absolute;
+	top: 0;
+	width: 40%;
+	height: 100%;
+	cursor: pointer;
+	text-decoration: none;
+	//background: transparent url(blank.gif); /* helps IE */
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
+	z-index: 8040;
+}
+
+.fancybox-prev {
+	left: 0;
+}
+
+.fancybox-next {
+	right: 0;
+}
+
+.fancybox-nav span {
+	position: absolute;
+	top: 50%;
+	width: 2.625rem;
+	height: 2.625rem;
+	cursor: pointer;
+	z-index: 8040;
+	visibility: hidden;
+	
+	&::before {
+		//content: 'W';
+		color: #fff;
+		font-family:icon-worksregular;
+		font-size: 2.625rem;
+		//line-height: 0.9;
+		text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+	}
+}
+
+.fancybox-prev span {
+	left: 10px;
+	//transform: rotate(180deg);
+	&::before {
+		content: 'w';
+	}
+}
+
+.fancybox-next span {
+	right: 10px;
+	&::before {
+		content: 'W';
+	}
+}
+
+.fancybox-nav:hover span {
+	visibility: visible;
+}
+
+.fancybox-tmp {
+	position: absolute;
+	top: -99999px;
+	left: -99999px;
+	max-width: 99999px;
+	max-height: 99999px;
+	overflow: visible !important;
+}
+
+/* Overlay helper */
+
+.fancybox-lock {
+    overflow: visible !important;
+    width: auto;
+}
+
+.fancybox-lock body {
+    overflow: hidden !important;
+}
+
+.fancybox-lock-test {
+    overflow-y: hidden !important;
+}
+
+.fancybox-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	display: none;
+	z-index: 8010;
+	background: transparent;
+}
+
+.fancybox-overlay-fixed {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+}
+
+.fancybox-lock .fancybox-overlay {
+	overflow: auto;
+	overflow-y: scroll;
+	background: rgba(0, 0, 0, 0.85);
+}
+
+/* Title helper */
+
+.fancybox-title {
+	visibility: hidden;
+	font: normal 13px/20px "Helvetica Neue",Helvetica,Arial,sans-serif;
+	position: relative;
+	text-shadow: none;
+	z-index: 8050;
+}
+
+.fancybox-opened .fancybox-title {
+	visibility: visible;
+}
+
+.fancybox-title-float-wrap {
+	position: absolute;
+	bottom: 0;
+	right: 50%;
+	margin-bottom: -35px;
+	z-index: 8050;
+	text-align: center;
+}
+
+.fancybox-title-float-wrap .child {
+	display: inline-block;
+	margin-right: -100%;
+	padding: 2px 20px;
+	background: transparent; /* Fallback for web browsers that doesn't support RGBa */
+	background: rgba(0, 0, 0, 0.8);
+	-webkit-border-radius: 15px;
+	   -moz-border-radius: 15px;
+	        border-radius: 15px;
+	text-shadow: 0 1px 2px #222;
+	color: #FFF;
+	font-weight: bold;
+	line-height: 24px;
+	white-space: nowrap;
+}
+
+.fancybox-title-outside-wrap {
+	position: relative;
+	margin-top: 10px;
+	color: #fff;
+}
+
+.fancybox-title-inside-wrap {
+	padding-top: 10px;
+}
+
+.fancybox-title-over-wrap {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	color: #fff;
+	padding: 10px;
+	background: #000;
+	background: rgba(0, 0, 0, .8);
+}
+
+/*Retina graphics!*/
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+	   only screen and (min--moz-device-pixel-ratio: 1.5),
+	   only screen and (min-device-pixel-ratio: 1.5){
+
+	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
+		background-image: url(fancybox_sprite@2x.png);
+		background-size: 44px 152px; /*The size of the normal image, half the size of the hi-res image*/
+	}
+
+	#fancybox-loading div {
+		background-image: url(fancybox_loading@2x.gif);
+		background-size: 24px 24px; /*The size of the normal image, half the size of the hi-res image*/
+	}
+}
+
+$input-border-bottom-size: 1px;
+
+.wpcf7-form {
+	span {
+		display: block;
+		float: left;
+		width: 100%;
+		margin: 0 0 $paragraph-margin-bottom;
+	}
+	input {
+		font-family: Roboto, sans-serif;
+		background: none;
+		border-color: rgba(255, 255, 255, 0.5);
+		border-style: none none solid;
+		border-width: medium medium $input-border-bottom-size;
+		color: #fff;
+		font-weight: 600;
+		line-height: $paragraph-line-height - rem-calc( $input-border-bottom-size);
+		padding: 0;
+	}
+	
+	.wpcf7-text, .wpcf7-textarea {
+		display: block;
+		float: left;
+		width: 100%;
+	}
+	
+	.wpcf7-submit {
+		background: $success-color;
+		border: none;
+		text-transform: uppercase;
+		font-weight: 400;
+		padding: 0 1.625rem * 2;
+		font-size: $paragraph-font-size;
+		line-height: $paragraph-line-height;
+		cursor: pointer;
+	}
+	
+	textarea {
+		background: rgba(0, 0, 0, 0.5);
+		border: none;
+		color: #fff;
+		padding: 1.625rem;
+		margin: 0;
+		width: 100%;
+		font-family: Roboto, sans-serif;
+		line-height: $paragraph-line-height;
+	}
+}
+
+.wpcf7-response-output {
+	background: rgba(0, 0, 0, 0.5);
+	color: #fff;
+}
+
+.wpcf7 img.ajax-loader {
+	float: right;
+	margin-right: -24px;
+	margin-top: 5px;
 }
